@@ -81,14 +81,14 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .article-tree,.content-area{height:100%;overflow:auto}
 .article-tree .collapse{direction:ltr}
 .btn{display:inline-block;text-align:center;vertical-align:middle}
-.btn.btn-browse,.btn.btn-submit{background-color:#92c86a;border:#000 1px solid;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;color:#000;font-size:16px;line-height:18px;margin:4px 0 4px}
-.btn.btn-browse{padding:4px 8px 4px}
 .btn.btn-sidebar{background-color:#92c86a;border:none;padding:9px 9px}
 .btn.btn-sidebar.collapse-bar{-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px}
 .btn.btn-sidebar .icon-bar{background-color:#000;display:block;height:2px;margin-bottom:3px;margin-top:2px;width:18px}
 .btn.btn-sidebar:hover{background-color:#000}
 .btn.btn-sidebar:hover .icon-bar{background-color:#569220}
-.btn.btn-submit{padding:4px 8px;font-family:Verdana,"Lucida Sans",tahoma,arial,sans-serif}
+.button{background:#70ba2f;background:-webkit-gradient(linear, left top, left bottom, from(#70ba2f), to(#45721d));background:-moz-linear-gradient(top, #70ba2f, #45721d);background:linear-gradient(to bottom, #70ba2f, #45721d);border:2px solid #adcb83;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;color:#000;display:inline-block;font-size:16px;font-weight:bold;line-height:18px;margin:4px 0;padding:4px 18px;font-family:Verdana,"Lucida Sans",tahoma,arial,sans-serif;text-align:center;text-decoration:none;text-shadow:#569220 1px 1px 1px;vertical-align:middle}
+.button:active{background:#45721d;background:-webkit-gradient(linear, left top, left bottom, from(#45721d), to(#45721d));background:-moz-linear-gradient(top, #45721d, #45721d);background:linear-gradient(to bottom, #45721d, #45721d)}
+.button:hover,.button:focus{background:#538923;background:-webkit-gradient(linear, left top, left bottom, from(#538923), to(#86df38));background:-moz-linear-gradient(top, #538923, #86df38);background:linear-gradient(to bottom, #538923, #86df38);border:2px solid #adcb83;color:#000;text-decoration:none}
 .checkbox{background:url(../img/icons.png) -90px -300px no-repeat;cursor:pointer;display:inline-block;height:16px;margin:9px 0;padding:1px 0;vertical-align:middle;width:16px}
 .checked{background:url(../img/icons.png) -120px -300px no-repeat transparent}
 .columns{height:100%}
@@ -105,7 +105,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .container-fluid{margin:0 auto;padding-top:54px}
 .container-fluid.fluid-height{height:100%}
 .container-group{display:inline-block}
-.content-page article{max-width:400px;min-width:400px;padding-bottom:18px}
+.content-page article{max-width:620px;min-width:400px;padding-bottom:18px}
 .content-page article>pre{font-size:14px;font-weight:700;line-height:18px;margin-bottom:18px;min-width:200px;padding:9px}
 .content-page blockquote{margin-top:0;margin-bottom:0}
 .content-page code{font-weight:700}
@@ -116,7 +116,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .content-page select{font-size:14px;line-height:14px}
 .content-page .folder-link>span{clear:left;float:left}
 .content-page .page-header{border-bottom:1px solid;border-color:#adcb83;margin-left:0;margin-right:0;min-width:400px;overflow:hidden;padding:9px 0 8px 0}
-.dialog{background-color:#f5f5f6;border:1px solid;border-color:#adcb83;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 5px 5px rgba(0,0,0,0.25);box-shadow:0 5px 5px rgba(0,0,0,0.25);max-width:50%;padding:8px}
+.dialog{background-color:#f5f5f6;border:1px solid;border-color:#adcb83;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:0 5px 5px rgba(0,0,0,0.25);box-shadow:0 5px 5px rgba(0,0,0,0.25);max-width:66%;padding:8px}
 .dialog-body{position:relative}
 .dialog-body form{vertical-align:middle}
 .dialog-close{background-color:#f00;color:#fff;cursor:pointer;display:inline-block;float:right;font-size:14px;font-weight:bold;height:16px;line-height:12px;margin:0 0 0 12px;text-align:center;vertical-align:middle;width:16px}
