@@ -3,11 +3,19 @@
       "admin" : {
          "active" : "1",
          "email" : "Admin@example.com",
-         "password" : "$2a$14$UvF5UWoz1D.CDZysyBbqiOmbRhfNx4tE2gGO1sW/d6yCxlLe7FNaq",
+         "password" : "$2a$14$bAVgShXsvyoChS4RTFUSOul0HLgSZRZyR0Ut0Ekodaei9Sv.erOwy",
          "roles" : [
             "admin",
             "editor",
-            "users"
+            "user"
+         ]
+      },
+      "fred" : {
+         "active" : "1",
+         "email" : "fred@example.com",
+         "password" : "$2a$14$l40/ENl/IGvrVSmKPG7atuo7WMVnlbp69wRBI2vVSdc2iDzByauJ2",
+         "roles" : [
+            "user"
          ]
       }
    }
