@@ -1,4 +1,8 @@
 /* Blue */
+@button-background-bottom: #5d858f;
+@button-background-top: #99dbeb;
+@button-highlight-bottom: #70a0ac;
+@button-highlight-top: #b8ffff;
 @contrast: #881102;
 @dark: #3f4657;
 @light: #82becd;
