@@ -1,4 +1,8 @@
 /* Green */
+@button-background-bottom: #45721d;
+@button-background-top: #70ba2f;
+@button-highlight-bottom: #538923;
+@button-highlight-top: #86df38;
 @contrast: #881102;
 @dark: #000000;
 @light: #569220;
