@@ -1,4 +1,8 @@
 /* Navy */
+@button-background-bottom: #607a93;
+@button-background-top: #9cc6ef;
+@button-highlight-bottom: #7392b0;
+@button-highlight-top: #bef;
 @contrast: #881102;
 @dark: #13132a;
 @light: #7795b4;
