@@ -1,4 +1,8 @@
 /* Red */
+@button-background-bottom: #a67f71;
+@button-background-top: #ffd0b9;
+@button-highlight-bottom: #c79888;
+@button-highlight-top: #fffade;
 @contrast: #881102;
 @dark: #c64641;
 @light: #ecb5a1;
