@@ -3,6 +3,6 @@
      enctype="application/x-www-form-urlencoded"
       method="post" name="create-file">
    <input  class="pathname" name="pathname" type="textfield">
-   <button class="btn btn-submit" name="_method" type="submit"
+   <button class="button" name="_method" type="submit"
            value="create_file">[% loc( 'Create' ) %]</button>
 </form>
