@@ -7,11 +7,11 @@
    <label  class="label" for="email">[% loc( 'Email address' ) %]</label>
    <input  class="standard-field" name="email" type="textfield"><br/>
    <label  class="label" for="password">[% loc( 'Password' ) %]</label>
-   <input  class="standard-field reveal" id="password"
+   <input  autocomplete="off" class="standard-field reveal" id="password"
             name="password" type="password"><br/>
    <label  class="label" for="again">[% loc( 'Again' ) %]</label>
    <input  class="standard-field reveal" id="again"
             name="again" type="password">
-   <button class="btn btn-submit" name="_method" type="submit"
+   <button class="button" name="_method" type="submit"
            value="create_user">[% loc( 'Register' ) %]</button>
 </form>
