@@ -14,7 +14,7 @@
                      <textarea class="editor autosize" id="markdown-editor"
                           name="content">[% page.content | html %]</textarea>
                      <br>
-                     <button class="btn btn-submit" name="_method" type="submit"
+                     <button class="button" name="_method" type="submit"
                          value="save_file">[% loc( 'Save' ) %]</button>
                   </form>
                </div>
