@@ -22,6 +22,6 @@
    <label  class="label" for="again">[% loc( 'Again' ) %]</label>
    <input  class="standard-field reveal" id="again"
             name="again" type="password">
-   <button class="btn btn-submit" name="_method" type="submit"
-           value="update_user">[% loc( 'Update' ) %]</button>
+   <button class="button" name="_method" type="submit"
+           value="update_profile">[% loc( 'Update' ) %]</button>
 </form>
