@@ -4,7 +4,7 @@
       method="post" name="rename-file">
    <input   name="old_path" type="hidden"  value="[% page.old_path %]">
    <input  class="pathname" name="pathname" type="textfield">
-   <button class="btn btn-submit" name="_method" type="submit"
+   <button class="button" name="_method" type="submit"
            value="rename_file">[% loc( 'Rename' ) %]</button>
 </form>
 <p>[% page.old_path %]</p>
