@@ -3,10 +3,10 @@
      enctype="multipart/form-data" method="post" name="upload-file">
    <input class="pathname" disabled="disabled"
              id="upload-path" placeholder="Choose File">
-   <div class="upload-file btn btn-browse">
+   <div class="upload-file button">
       <span>[% loc( 'Browse' ) %]</span><br>
       <input class="upload" id="upload-btn" name="file" type="file">
    </div>
-   <button class="btn btn-submit" name="_method" type="submit"
+   <button class="button" name="_method" type="submit"
            value="upload_file">[% loc( 'Upload' ) %]</button>
 </form>
