@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Admin page functional improvements
           - Improved CSS for forms
           - Upated metadata
           - Added user profile management
